# teeny-autograd-c

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: c-cpp.yml
examples/mnist_mlp/: mnist_mlp.c  x_train.txt  y_test.txt  y_train.txt
examples/paint/: Makefile  main.c  paint.c
src/: linear_layer.c  linear_layer.h  main  multilayer_perceptron.c  multilayer_perceptron.h  ndarray.c  ndarray.h  variable.c  variable.h
test/: Makefile  generate_multilayer_perceptron_tests.py  generate_ndarray_tests.py  generate_variable_tests.py  save_ndarray.py  test_linear_layer.c  test_multilayer_perceptron.c  test_ndarray.c  test_variable.c  valgrind-out.txt
test/test_data/: test_add_variable_var1_val.txt  test_add_variable_var2_grad.txt  test_add_variable_var_val.txt  test_backward_a_grad.txt  test_backward_b_grad.txt  test_backward_c_val.txt  test_divide_variable_var1_grad.txt  test_divide_variable_var1_val.txt  test_divide_variable_var2_grad.txt  test_divide_variable_var2_val.txt  test_divide_variable_var_val.txt  test_forward_linear_layer_bias_val.txt  test_forward_linear_layer_input_val.txt  test_forward_linear_layer_output_val.txt  test_forward_linear_layer_weights_val.txt  test_forward_multilayer_perceptron_bias0_grad.txt  test_forward_multilayer_perceptron_bias0_val.txt  test_forward_multilayer_perceptron_bias1_grad.txt  test_forward_multilayer_perceptron_bias1_val.txt  test_forward_multilayer_perceptron_bias2_grad.txt  test_forward_multilayer_perceptron_bias2_val.txt  test_forward_multilayer_perceptron_input_val.txt  test_forward_multilayer_perceptron_output_val.txt  test_forward_multilayer_perceptron_up_stream_grad.txt  test_forward_multilayer_perceptron_weights0_grad.txt  test_forward_multilayer_perceptron_weights0_val.txt  test_forward_multilayer_perceptron_weights1_grad.txt  test_forward_multilayer_perceptron_weights1_val.txt  test_forward_multilayer_perceptron_weights2_grad.txt  test_forward_multilayer_perceptron_weights2_val.txt  test_matmul_variable_up_stream_grad.txt  test_matmul_variable_var1_grad.txt  test_matmul_variable_var1_val.txt  test_matmul_variable_var2_grad.txt  test_matmul_variable_var2_val.txt  test_matmul_variable_var_val.txt  test_multiply_variable_var1_grad.txt  test_multiply_variable_var2_grad.txt  test_multiply_variable_var_val.txt  test_power_variable_up_stream_grad.txt  (+14 more)
test/test_data/test_multilayer_perceptron/test_forward_multilayer_perceptron/: bias0.txt  bias0_grad.txt  bias1.txt  bias1_grad.txt  bias2.txt  bias2_grad.txt  weights0.txt  weights0_grad.txt  weights1.txt  weights1_grad.txt  weights2.txt  weights2_grad.txt  x.txt  y.txt  z.txt
test/test_data/test_ndarray/test_add_ndarray_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt
test/test_data/test_ndarray/test_add_ndarray_scalar/: x.txt  y.txt
test/test_data/test_ndarray/test_binary_op_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  a6.txt  b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  b6.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt  c6.txt
test/test_data/test_ndarray/test_divide_ndarray_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt
test/test_data/test_ndarray/test_divide_ndarray_scalar/: x.txt  y.txt
test/test_data/test_ndarray/test_divide_scalar_ndarray/: x.txt  y.txt
test/test_data/test_ndarray/test_log_ndarray/: x.txt  y.txt
test/test_data/test_ndarray/test_matmul_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  b0.txt  b1.txt  b2.txt  b3.txt  c0.txt  c1.txt  c2.txt  c3.txt
test/test_data/test_ndarray/test_max_ndarray/: x.txt  y0.txt  y1.txt  y2.txt
test/test_data/test_ndarray/test_min_ndarray/: x.txt  y0.txt  y1.txt  y2.txt
test/test_data/test_ndarray/test_multiply_ndarray_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt
test/test_data/test_ndarray/test_multiply_ndarray_scalar/: x.txt  y.txt
test/test_data/test_ndarray/test_power_ndarray_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt
test/test_data/test_ndarray/test_power_ndarray_scalar/: x.txt  y.txt
test/test_data/test_ndarray/test_read_ndarray/: x.txt
test/test_data/test_ndarray/test_subtract_ndarray_ndarray/: a0.txt  a1.txt  a2.txt  a3.txt  a4.txt  a5.txt  b0.txt  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt
test/test_data/test_ndarray/test_subtract_ndarray_scalar/: x.txt  y.txt
test/test_data/test_ndarray/test_sum_ndarray/: x.txt  y0.txt  y1.txt  y2.txt
test/test_data/test_ndarray/test_transpose_ndarray/: x.txt  y0.txt  y1.txt  y2.txt
test/test_data/test_ndarray/test_unary_op_ndarray/: x.txt  y.txt
test/test_data/test_variable/test_add_variable/: a0.txt  a0_grad.txt  a1.txt  a1_grad.txt  a2.txt  a2_grad.txt  a3.txt  a3_grad.txt  a4.txt  a4_grad.txt  a5.txt  a5_grad.txt  b0_grad.txt  b1.txt  b1_grad.txt  b2.txt  b2_grad.txt  b3.txt  b3_grad.txt  b4.txt  b4_grad.txt  b5.txt  b5_grad.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt  d0.txt  d1.txt  d2.txt  d3.txt  d4.txt  d5.txt
test/test_data/test_variable/test_backward_variable/: a.txt  a_grad.txt  b.txt  b_grad.txt  c.txt  c_grad.txt  d.txt  e.txt
test/test_data/test_variable/test_divide_variable/: a0.txt  a0_grad.txt  a1.txt  a1_grad.txt  a2.txt  a2_grad.txt  a3.txt  a3_grad.txt  a4.txt  a4_grad.txt  a5.txt  a5_grad.txt  b0.txt  b0_grad.txt  b1.txt  b1_grad.txt  b2.txt  b2_grad.txt  b3.txt  b3_grad.txt  b4.txt  b4_grad.txt  b5.txt  b5_grad.txt  c0.txt  c1.txt  c2.txt  c3.txt  c4.txt  c5.txt  d0.txt  d1.txt  d2.txt  d3.txt  d4.txt  d5.txt
utils/: generate_multilayer_perceptron_tests.py  generate_ndarray_tests.py  generate_variable_tests.py  save_ndarray.py  temp.py  temp_.py  temp__.py  temp___.py
(+224 files in other folders)
